[package]
name = "grrs"
version = "0.1.0"
authors = ["Jonathan Hutton <jhutton@dealersocket.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.38"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
tempfile = "3.2.0"
